--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "rs485.h": "c",
         "msp8266.h": "c",
         "led.h": "c",
-        "ov2640.h": "c"
+        "ov2640.h": "c",
+        "usart.h": "c"
     }
 }
